# fossil_fuel_subsidies

./: .gitignore  README.md  pyproject.toml
output/: README.md  chart_1_base.csv  chart_1_data.csv  chart_2_base.csv  chart_2_data.csv  climate_finance_commitments.csv  climate_finance_providers.csv  provider_perspective_available_donors_and_years.csv
raw_data/: climate_finance_commitments_all.csv  climate_finance_provider_perspective_data.parquet
scripts/: analysis.py  charts.py  climate_finance_data.py  common.py  format_raw.py  utils.py
