[tool.poetry]
package-mode = false
authors = ["The ONE Campaign"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
country-converter = "^1.2"
climate-finance = {git = "https://github.com/ONEcampaign/climate-finance-package.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
